MDEV-7222: Cluster Node Crash at CREATE DEFINER statement

Check whether the definer host string is not null before
appending it to the specified buffer.