sql/sql_show.cc
@@ -2140,7 +2140,7 @@ void append_definer(THD *thd, String *buffer, const LEX_STRING *definer_user,
 {
   buffer->append(STRING_WITH_LEN("DEFINER="));
   append_identifier(thd, buffer, definer_user->str, definer_user->length);
-  if (definer_host->str[0])
+  if (definer_host->str && definer_host->str[0])
   {
     buffer->append('@');
     append_identifier(thd, buffer, definer_host->str, definer_host->length);
